<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dangxia.com.ui.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/colorPrimary"
        android:id="@+id/textView15" />

    <android.support.v7.widget.CardView
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="0dp"
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView15">

        <View
            android:id="@+id/back_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true" />

        <ImageView
            android:contentDescription="@string/back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            app:srcCompat="@drawable/ic_arrow_left"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/chat_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_user_register"
            android:textColor="#fff"
            android:textSize="16sp" />
    </android.support.v7.widget.CardView>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout2"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmail">

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="142dp">

        <EditText
            android:id="@+id/account_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="textVisiblePassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/v_code_edit_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/send_vcode_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:ignore="RtlHardcoded">

        <EditText
            android:id="@+id/v_code_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/verification_code"
            android:inputType="number"
            android:maxLength="6" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/register"
        android:textColor="#fff"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/v_code_edit_layout"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <Button
        android:id="@+id/send_vcode_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"

        android:background="@color/colorPrimary"
        android:text="@string/send_vcode"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:ignore="RtlHardcoded" />
</android.support.constraint.ConstraintLayout>
